# appbase

./: CMakeLists.txt  README.md  application.cpp  application_base.cpp
.github/workflows/: build.yaml
examples/: CMakeLists.txt  main.cpp
examples/default_example/: CMakeLists.txt
examples/executor_example/: CMakeLists.txt  application.hpp  main.cpp
include/appbase/: abstract_plugin.hpp  application.hpp  application_base.hpp  application_instance.hpp  channel.hpp  default_executor.hpp  execution_priority_queue.hpp  method.hpp  plugin.hpp  two_queue_executor.hpp
tests/: CMakeLists.txt  basic_test.cpp  executor_test.cpp  pri_queue_tests.cpp  shutdown_test.cpp  two_queue_executor.hpp  two_queue_tests.cpp
